[project]
name = "social-content-bot"
version = "1.0.0"
description = "AI-powered social media post generator from Reddit and WordPress content"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.8.1",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "secure-smtplib>=0.1.1",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.7.0",
    "colorlog>=6.8.0",
    "scweet>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
